# projects

./: index.html
dag_training_scheduler/: README.md  demo.py
dag_training_scheduler/scheduler/: __init__.py  core.py  dag.py  reaper.py  worker.py
sim2real-perception/: .gitignore  README.md  pyproject.toml
sim2real-perception/configs/: deploy.yaml  dr.yaml  eval.yaml  train.yaml
sim2real-perception/cpp/: CMakeLists.txt  README.md
sim2real-perception/cpp/apps/: deploy_replay.cpp
sim2real-perception/cpp/bindings/: pymodule.cpp
sim2real-perception/cpp/include/s2r/: cosine_gate.hpp  image_pipeline.hpp  manifest.hpp  ort_engine.hpp  runtime.hpp
sim2real-perception/cpp/src/: cosine_gate.cpp  image_pipeline.cpp  manifest.cpp  ort_engine.cpp  runtime.cpp
sim2real-perception/cpp/tests/: test_pipeline.cpp
sim2real-perception/scripts/: 00_setup_assets.py  01_record_demo.py  02_generate_data.py  03_filter_data.py  04_train.py  05_eval.py  06_export.py  07_bench_cpp.py
sim2real-perception/src/sim2real/: __init__.py  common.py
sim2real-perception/src/sim2real/datagen/: builder.py  clip_guide.py  randomizer.py  textures.py
sim2real-perception/src/sim2real/eval/: runner.py  suites.py
sim2real-perception/src/sim2real/export/: bundle.py
sim2real-perception/src/sim2real/perception/: backbone.py  filter.py  lora.py
sim2real-perception/src/sim2real/policy/: bc.py  dataset.py  trainer.py
sim2real-perception/src/sim2real/sim/: env.py  expert.py  recorder.py  scene.py
sim2real-perception/tests/: test_filter.py  test_lora.py  test_parity.py
vla-safety-runtime/: .gitignore  README.md  pyproject.toml
vla-safety-runtime/assets/: calib.json
vla-safety-runtime/configs/: default.yaml
vla-safety-runtime/cpp/: CMakeLists.txt
vla-safety-runtime/cpp/include/vla/: seqlock_ring.hpp
vla-safety-runtime/cpp/src/: control_loop.cpp  test_seqlock.cpp
vla-safety-runtime/scripts/: 00_setup_assets.py  01_gen_demos.py  01b_dagger.py  02_train_vla.py  03_eval_baseline.py  04_run_safety.py  05_bench_latency.py  06_ablation_serial.py  07_report.py  99_sanity_rollout.py
vla-safety-runtime/src/vla_safety/: __init__.py  common.py
vla-safety-runtime/src/vla_safety/baselines/: __init__.py  qp_fallback.py
vla-safety-runtime/src/vla_safety/env/: __init__.py  expert.py  manip_env.py  sampler.py  scene.py
vla-safety-runtime/src/vla_safety/perception/: __init__.py  depth_safety.py
vla-safety-runtime/src/vla_safety/runtime/: episode.py  eval_runner.py  ring.py  streams.py
vla-safety-runtime/src/vla_safety/safety/: __init__.py  arms.py  bandit.py  monitor.py
vla-safety-runtime/src/vla_safety/vla/: __init__.py  dataset.py  model.py  policy.py  tokenizer.py
vla-safety-runtime/tests/: test_units.py
vla-safety-runtime/weights/: train_report.json
