[project]
name = "vla-safety-runtime"
version = "0.1.0"
description = "感知-策略解耦 + MAB Oracle Monitor + <5ms 恢复通道的 VLA 运行时安全系统复现"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "torch>=2.4",
    "mujoco>=3.2",
    "pyyaml",
    "matplotlib",
    "pillow",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
